tests/ui/parser/using_empty_list.sol
using {} for uint; //~ ERROR: expected identifier
